		   and 'ao-add' in ECI documentation and 
		   code examples in 'ecasound/examples'
	- changed: user's and programmer's guides updated
	- changed: bug-alert; major rewrite of ecasound's 
                   internal object factory code
	- changed: eiam - output of aio-register, cop-register,
		   ladspa-register and preset-register commands
21102001 (v2.1dev3)
	- note: major changes to effect preset system which 
		break some old preset definitions
	- edi-entries: edi-3
	- added: ecasound-config - --ldflags and --prefix
	- added: engine profiling info (printed to stderr)
	- added: -z:multitrack, -z:nomultitrack for forced enabling
		 and disabling of multitrack-mode
	- added: variable-like preset parameters; it's now possible
		 to bind one preset parameter to multiple chainops'
		 parameters (control multiple settings with one
		 parameter)
	- added: support for describing preset parameters (edi-3)
	- changed: pyecasound - makefile-hack that allows pyecasound
		   to work even though compiled against libecasound 
		   and libkvutils that are not installed to 
		   a directory listed in /etc/ld.so.conf
	- changed: db-subsystem - is put to sleep more 
		   aggressively, which should further decrease 
		   its cpu-load
	- changed: db-subsystem - runs once again under sched_fifo
		   scheduling if -r is enabled
	- changed: ALSA xrun reports are now printed to stderr 
		   instead of ecasound debug-subsystem
	- changed: -B:rt selected as the default bmode for 
		   multitrack-setups (instead of -B:lowlatency)
	- changed: preset definitions in 'effect_presets' changed
		   to take advantage of the preset system improvements
	- fixed: major bugs in interpreting LADSPA plugin 
		 parameter hint flags
	- fixed: a nasty bug in bufmode activation code prevented
		 -kos, -kl, and others from working properly
	- fixed: loop devices didn't work well with -z:db; fixes
		 ecasound testsuite case con_test1-8
	- fixed: memory leak in LADSPA handling code; was triggered