@@ -34,6 +34,8 @@ Last officially released version is -*> v2.0.3 *-
                    internal object factory code
 	- changed: eiam - output of aio-register, cop-register,
 		   ladspa-register and preset-register commands
+	- fixed: multitrack mode was not properly detected if 
+		 buffering mode was selected explicitly (-B)
 21102001 (v2.1dev3)
 	- note: major changes to effect preset system which 
 		break some old preset definitions
